--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0" />
-    <title>Atomic Demo</title>
+    <title>Atomic Components</title>
 
-    <script type="module" src="/node_modules/@coveo/atomic/dist/atomic/atomic.esm.js"></script>
+    <script type="module" src="/build/atomic.esm.js"></script>
     <script nomodule src="/build/atomic.js"></script>
     <link rel="stylesheet" href="/build/atomic.css" />
     <script>
@@ -41,50 +41,35 @@
       } */
 
       /* Example on how to customize custom templates CSS parts */
-
-      atomic-tab::part(tab-button) {
-        border-radius: 6px;
-        color: rgb(25, 0, 255);
-        background-color: seashell;
-      }
-      atomic-tab:hover::part(tab-button) {
-        background-color: orangered;
-        color: seashell;
-      }
-
-      atomic-search-box::part(submit-button) {
-        background-color: orangered;
-      }
-
-      #tabs {
-        display: flex;
-        justify-content: center;
+      atomic-result-list::part(france-title)::before,
+      atomic-result-list::part(france-title)::after {
+        content: '🇫🇷';
       }
     </style>
   </head>
 
   <body class="p-2">
     <atomic-search-interface id="search">
-      <div id="tabs" class="space-x-4">
-        <atomic-tab expression="" class="">All Files</atomic-tab>
+      <div class="flex mx-auto mb-2 justify-center">
+        <atomic-tab expression="" class="mr-2">All Files</atomic-tab>
         <atomic-tab expression='@author *= "BBC News"'>BBC News</atomic-tab>
       </div>
-      <div class="m-auto my-4 max-w-3xl">
-        <atomic-search-box leading-submit-button="true"> </atomic-search-box>
+      <div class="m-auto my-3 max-w-5xl">
+        <atomic-search-box></atomic-search-box>
       </div>
-      <div class="flex flex-col lg:flex-row p-3">
-        <atomic-facet-manager class="flex flex-row mx-2 mb-2 lg:flex-col lg:w-50">
+      <div class="flex flex-col lg:flex-row">
+        <atomic-facet-manager class="flex flex-row mx-2 mb-2 lg:flex-col lg:w-80">
           <atomic-facet class="mr-2" field="author" label="Authors"></atomic-facet>
-          <atomic-numeric-facet class="mr-2" field="size" label="File sizes in"></atomic-numeric-facet>
+          <atomic-numeric-facet class="mr-2" field="size" label="File sizes"></atomic-numeric-facet>
           <atomic-date-facet class="mr-2" field="created" label="Created"></atomic-date-facet>
           <atomic-category-facet class="mr-2" field="geographicalhierarchy" label="World Atlas"></atomic-category-facet>
         </atomic-facet-manager>
         <div class="flex-grow pl-2">
-          <atomic-breadcrumb-manager category-divider="|" collapse-threshold="3"></atomic-breadcrumb-manager>
+          <atomic-breadcrumb-manager></atomic-breadcrumb-manager>
           <atomic-did-you-mean></atomic-did-you-mean>
           <atomic-query-error></atomic-query-error>
           <div class="flex justify-between items-end my-2">
-            <atomic-query-summary class="p-2"></atomic-query-summary>
+            <atomic-query-summary></atomic-query-summary>
             <atomic-sort-dropdown>
               <atomic-sort-criteria caption="relevance" criteria="relevancy"></atomic-sort-criteria>
               <atomic-sort-criteria caption="mostRecent" criteria="date descending"></atomic-sort-criteria>
@@ -93,19 +78,20 @@
 
           <atomic-no-results></atomic-no-results>
 
-          <atomic-result-list class="grid max-w-full" fields-to-include="filetype">
-            <atomic-result-template id="demoTemplate">
+          <atomic-result-list class="max-w-full">
+            <atomic-result-template id="france-template">
               <hr />
-              <div id="title" class="py-4" style="color: slategrey">
-                <a href="{{clickUri}}"><h3 class="text-xl">{{title}}</h3></a>
-              </div>
-              <p class="pb-4">
-                <atomic-result-value value="excerpt"></atomic-result-value>
+              <img src="https://www.cia-france.com/media/1558/parcarou1_720x500.jpg" alt="Paris" />
+              <h5 part="france-title">{{title}}</h5>
+              <p>
+                <atomic-result-value value="excerpt"> </atomic-result-value>
               </p>
-              <div id="type">
-                <atomic-result-value value="filetype"></atomic-result-value>
-              </div>
+              <a href="{{clickUri}}">More info</a>
             </atomic-result-template>
+
+            <script>
+              document.querySelector('#france-template').conditions = [(result) => result.title === 'France'];
+            </script>
           </atomic-result-list>
 
           <div class="flex flex-col lg:flex-row justify-between my-2">
